yanl/examples/t1/correct/multiple_explicit_casts.yanl
#multiple explicit casts
program gigi;

var
        c:char;
        i:integer;
        b:boolean;
        r:real;

begin 
        c := (char)(real)(integer)(boolean)(integer)b;
end.